--- a/meet_our_team.html
+++ b/meet_our_team.html
@@ -71,7 +71,8 @@
                     <a href="https://instagram.com/?lang=en" target="_blank"><i class="ri-instagram-line"></i></a>
                   </li>
                   <li>
-                    <a href="https://linkedin.com/?lang=en" target="_blank"><i class="ri-linkedin-line"></i></a>
+                    <a href="https://www.linkedin.com/company/people-prudent-consulting-hr-solutions-private-limited/"
+                      target="_blank"><i class="ri-linkedin-line"></i></a>
                   </li>
                 </ul>
               </div>
@@ -109,7 +110,7 @@
                 </li>
 
                 <li class="nav-item">
-                  <a href="our_services.html" class="nav-link" > Our Services </a>
+                  <a href="our_services.html" class="nav-link"> Our Services </a>
                 </li>
 
                 <li class="nav-item">
@@ -123,7 +124,7 @@
                 <li class="nav-item">
                   <a href="https://peopleprudent.com/insights/" class="nav-link"> Insights </a>
                 </li>
-  
+
                 <li class="nav-item">
                   <a href="https://peopleprudent.com/resources/" class="nav-link"> Resources </a>
                 </li>
@@ -156,14 +157,6 @@
       <div class="container">
         <div class="inner_text">
           <h2>Meet Our team </h2>
-          <div class="brad_crumbs">
-            <ul>
-              <li>
-                <a href="index.html">Home</a>
-              </li>
-              <li>| Meet Our team </li>
-            </ul>
-          </div>
         </div>
       </div>
     </div>
@@ -175,8 +168,10 @@
     <div class="container">
       <div class="section-title">
         <!-- <h1>Services</h1> -->
-        <p>At People Prudent, we are experts building the bedrock of organizational success - crafting people policies, systems, processes and solutions that pave the way for unparalleled business success.<br>
-          With a steadfast commitment to delivering tangible returns on investment, we offer HR solutions meticulously designed & tailor to elevate your organization to new heights.</p>
+        <p>At People Prudent, we are experts building the bedrock of organizational success - crafting people policies,
+          systems, processes and solutions that pave the way for unparalleled business success.<br>
+          With a steadfast commitment to delivering tangible returns on investment, we offer HR solutions meticulously
+          designed & tailor to elevate your organization to new heights.</p>
       </div>
     </div>
     <div class="section-para">
@@ -188,7 +183,8 @@
               <div class="social-content">
                 <ul>
                   <li>
-                    <a href="https://linkedin.com/?lang=en" target="_blank"><i class="ri-linkedin-line"></i></a>
+                    <a href="https://www.linkedin.com/in/singhnirmal?utm_source=share&utm_campaign=share_via&utm_content=profile&utm_medium=android_app"
+                      target="_blank"><i class="ri-linkedin-line"></i></a>
                   </li>
                 </ul>
               </div>
@@ -205,8 +201,8 @@
               <div class="social-content">
                 <ul>
                   <li>
-                    <a href="https://www.linkedin.com/in/jackson-hrangchal-19437bb1/" target="_blank"><i
-                        class="ri-linkedin-line"></i></a>
+                    <a href="https://www.linkedin.com/in/jackson-hrangchal-19437bb1?utm_source=share&utm_campaign=share_via&utm_content=profile&utm_medium=android_app"
+                      target="_blank"><i class="ri-linkedin-line"></i></a>
                   </li>
                 </ul>
               </div>
@@ -223,7 +219,8 @@
               <div class="social-content">
                 <ul>
                   <li>
-                    <a href="https://linkedin.com/?lang=en" target="_blank"><i class="ri-linkedin-line"></i></a>
+                    <a href="https://www.linkedin.com/in/karishma-jhala-ingale-60421a14b?utm_source=share&utm_campaign=share_via&utm_content=profile&utm_medium=android_app"
+                      target="_blank"><i class="ri-linkedin-line"></i></a>
                   </li>
                 </ul>
               </div>
@@ -240,7 +237,8 @@
               <div class="social-content">
                 <ul>
                   <li>
-                    <a href="https://linkedin.com/?lang=en" target="_blank"><i class="ri-linkedin-line"></i></a>
+                    <a href="https://www.linkedin.com/in/arunima-mukherjee-37b323192?utm_source=share&utm_campaign=share_via&utm_content=profile&utm_medium=android_app"
+                      target="_blank"><i class="ri-linkedin-line"></i></a>
                   </li>
                 </ul>
               </div>
@@ -258,7 +256,8 @@
                 <div class="social-content">
                   <ul>
                     <li>
-                      <a href="https://linkedin.com/?lang=en" target="_blank"><i class="ri-linkedin-line"></i></a>
+                      <a href="https://www.linkedin.com/in/vibhavari-patil-511138149?utm_source=share&utm_campaign=share_via&utm_content=profile&utm_medium=android_app"
+                        target="_blank"><i class="ri-linkedin-line"></i></a>
                     </li>
                   </ul>
                 </div>
@@ -297,7 +296,8 @@
                   <a href="https://instagram.com/?lang=en" target="_blank"><i class="ri-instagram-line"></i></a>
                 </li>
                 <li>
-                  <a href="https://linkedin.com/?lang=en" target="_blank"><i class="ri-linkedin-line"></i></a>
+                  <a href="https://www.linkedin.com/company/people-prudent-consulting-hr-solutions-private-limited/"
+                    target="_blank"><i class="ri-linkedin-line"></i></a>
                 </li>
               </ul>
             </div>
