--- a/our_clients.html
+++ b/our_clients.html
@@ -71,7 +71,8 @@
                     <a href="https://instagram.com/?lang=en" target="_blank"><i class="ri-instagram-line"></i></a>
                   </li>
                   <li>
-                    <a href="https://linkedin.com/?lang=en" target="_blank"><i class="ri-linkedin-line"></i></a>
+                    <a href="https://www.linkedin.com/company/people-prudent-consulting-hr-solutions-private-limited/"
+                      target="_blank"><i class="ri-linkedin-line"></i></a>
                   </li>
                 </ul>
               </div>
@@ -109,11 +110,7 @@
                 </li>
 
                 <li class="nav-item">
-                  <a href="our_services.html" class="nav-link" > Our Services </a>
-                </li>
-
-                <li class="nav-item">
-                  <a href="meet_our_team.html" class="nav-link"> Meet Our Team </a>
+                  <a href="our_services.html" class="nav-link"> Our Services </a>
                 </li>
 
                 <li class="nav-item">
@@ -123,7 +120,7 @@
                 <li class="nav-item">
                   <a href="https://peopleprudent.com/insights/" class="nav-link"> Insights </a>
                 </li>
-  
+
                 <li class="nav-item">
                   <a href="https://peopleprudent.com/resources/" class="nav-link"> Resources </a>
                 </li>
@@ -156,14 +153,6 @@
       <div class="container">
         <div class="inner_text">
           <h2>Our clients</h2>
-          <div class="brad_crumbs">
-            <ul>
-              <li>
-                <a href="index.html">Home</a>
-              </li>
-              <li>| Our Clients </li>
-            </ul>
-          </div>
         </div>
       </div>
     </div>
@@ -174,12 +163,6 @@
   <div class="about-our-clients">
     <div class="container">
       <div class="section-title">
-        <!-- <h1>Services</h1> -->
-        <!-- <p>At People Prudent, we are focused on serving our clients in one of the fastest growing markets that of the GCC. We pride ourselves in helping them navigate the challenges of today's business landscape, in seizing opportunities by guiding and implementing industry firsts and best practice.<br>
-        We are here to empower your organization's success every step of the way.<br>
-        Discover the power of partnership as we work together to unleash the full potential of your organization.</p>
-        <h4>Contact us</h4>
-        <h4>Accelerate into the Future</h4> -->
       </div>
     </div>
     <div class="section-para">
@@ -189,10 +172,13 @@
             <div class="skill-title">
               <h1>Our Clients</h1>
               <p>
-                At People Prudent, we are focused on serving our clients in one of the fastest growing markets that of the GCC. We pride ourselves in helping them navigate the challenges of today's business landscape, in seizing opportunities by guiding and implementing industry firsts and best practice.
+                At People Prudent, we are focused on serving our clients in one of the fastest growing markets that of
+                the GCC. We pride ourselves in helping them navigate the challenges of today's business landscape, in
+                seizing opportunities by guiding and implementing industry firsts and best practice.
                 <br></br>
                 We are here to empower your organization's success every step of the way.<br><br>
-                Discover the power of partnership as we work together to unleash the full potential of your organization.<br>
+                Discover the power of partnership as we work together to unleash the full potential of your
+                organization.<br>
               <h3>Contact us</h3>
               <h4>Accelerate into the Future!</h4>
               </p>
@@ -217,7 +203,7 @@
         </div>
       </div>
     </div>
-    
+
   </div>
 
   <!-- Our clients section ends here-->
@@ -244,7 +230,8 @@
                   <a href="https://instagram.com/?lang=en" target="_blank"><i class="ri-instagram-line"></i></a>
                 </li>
                 <li>
-                  <a href="https://linkedin.com/?lang=en" target="_blank"><i class="ri-linkedin-line"></i></a>
+                  <a href="https://www.linkedin.com/company/people-prudent-consulting-hr-solutions-private-limited/"
+                    target="_blank"><i class="ri-linkedin-line"></i></a>
                 </li>
               </ul>
             </div>
@@ -291,10 +278,6 @@
                 <li>
                   <i class="ri-arrow-right-s-line"></i>
                   <a href="our_services.html"> Our sevices </a>
-                </li>
-                <li>
-                  <i class="ri-arrow-right-s-line"></i>
-                  <a href="meet_our_team.html"> Meet our team </a>
                 </li>
                 <li>
                   <i class="ri-arrow-right-s-line"></i>
