--- a/our_services.html
+++ b/our_services.html
@@ -71,7 +71,8 @@
                     <a href="https://instagram.com/?lang=en" target="_blank"><i class="ri-instagram-line"></i></a>
                   </li>
                   <li>
-                    <a href="https://linkedin.com/?lang=en" target="_blank"><i class="ri-linkedin-line"></i></a>
+                    <a href="https://www.linkedin.com/company/people-prudent-consulting-hr-solutions-private-limited/"
+                      target="_blank"><i class="ri-linkedin-line"></i></a>
                   </li>
                 </ul>
               </div>
@@ -113,17 +114,13 @@
                 </li>
 
                 <li class="nav-item">
-                  <a href="meet_our_team.html" class="nav-link"> Meet Our Team </a>
-                </li>
-
-                <li class="nav-item">
                   <a href="our_clients.html" class="nav-link"> Our Clients </a>
                 </li>
 
                 <li class="nav-item">
                   <a href="https://peopleprudent.com/insights/" class="nav-link"> Insights </a>
                 </li>
-  
+
                 <li class="nav-item">
                   <a href="https://peopleprudent.com/resources/" class="nav-link"> Resources </a>
                 </li>
@@ -156,14 +153,6 @@
       <div class="container">
         <div class="inner_text">
           <h2>Our Services </h2>
-          <div class="brad_crumbs">
-            <ul>
-              <li>
-                <a href="index.html">Home</a>
-              </li>
-              <li>| Our services</li>
-            </ul>
-          </div>
         </div>
       </div>
     </div>
@@ -373,7 +362,8 @@
                   <a href="https://instagram.com/?lang=en" target="_blank"><i class="ri-instagram-line"></i></a>
                 </li>
                 <li>
-                  <a href="https://linkedin.com/?lang=en" target="_blank"><i class="ri-linkedin-line"></i></a>
+                  <a href="https://www.linkedin.com/company/people-prudent-consulting-hr-solutions-private-limited/"
+                    target="_blank"><i class="ri-linkedin-line"></i></a>
                 </li>
               </ul>
             </div>
@@ -420,10 +410,6 @@
                 <li>
                   <i class="ri-arrow-right-s-line"></i>
                   <a href="our_services.html"> Our sevices </a>
-                </li>
-                <li>
-                  <i class="ri-arrow-right-s-line"></i>
-                  <a href="meet_our_team.html"> Meet our team </a>
                 </li>
                 <li>
                   <i class="ri-arrow-right-s-line"></i>
