--- a/contact_us.html
+++ b/contact_us.html
@@ -65,7 +65,8 @@
                   <a href="https://instagram.com/?lang=en" target="_blank"><i class="ri-instagram-line"></i></a>
                 </li>
                 <li>
-                  <a href="https://linkedin.com/?lang=en" target="_blank"><i class="ri-linkedin-line"></i></a>
+                  <a href="https://www.linkedin.com/company/people-prudent-consulting-hr-solutions-private-limited/"
+                    target="_blank"><i class="ri-linkedin-line"></i></a>
                 </li>
               </ul>
             </div>
@@ -99,15 +100,11 @@
           <div class="collapse navbar-collapse mean-menu" id="navbarSupportedContent">
             <ul class="navbar-nav">
               <li class="nav-item">
-                <a href="index.html" class="nav-link" > Home </a>
+                <a href="index.html" class="nav-link"> Home </a>
               </li>
 
               <li class="nav-item">
                 <a href="our_services.html" class="nav-link"> Our Services </a>
-              </li>
-
-              <li class="nav-item">
-                <a href="meet_our_team.html" class="nav-link"> Meet Our Team </a>
               </li>
 
               <li class="nav-item">
@@ -149,14 +146,6 @@
     <div class="container">
       <div class="inner_text">
         <h2>Contact Us</h2>
-        <div class="brad_crumbs">
-          <ul>
-            <li>
-              <a href="index.html">Home</a>
-            </li>
-            <li>| Contact Us</li>
-          </ul>
-        </div>
       </div>
     </div>
   </div>
@@ -176,238 +165,230 @@
           as possible.</p>
       </div>
       <div class="contacts-form">
-        <form id="contactForm" action="upload.php" method="POST" enctype="multipart/form-data">
+        <form id="contactForm" action="contact_form.php" method="POST">
           <div class="row">
             <div class="col-lg-4 col-sm-6">
               <div class="form-group">
-                <input type="text" name="name" placeholder="Name *" id="name" class="form-control" required
-                  data-error="Please enter your name">
-                <div class="help-block with-errors"></div>
+                <input type="text" name="name" placeholder="Name *" id="name" class="form-control" required>
               </div>
             </div>
-
             <div class="col-lg-4 col-sm-6">
               <div class="form-group">
-                <input type="email" name="email" id="email" placeholder="Email*" class="form-control" required
-                  data-error="Please enter your email">
-                <div class="help-block with-errors"></div>
+                <input type="email" name="email" id="email" placeholder="Email*" class="form-control" required>
               </div>
             </div>
-
             <div class="col-lg-4 col-sm-6">
               <div class="form-group">
                 <input type="text" name="phone_number" id="phone_number" placeholder="Number*" required
-                  data-error="Please enter your number" class="form-control">
-                <div class="help-block with-errors"></div>
+                  class="form-control">
               </div>
             </div>
-
             <div class="col-lg-12 col-sm-6">
               <div class="form-group">
                 <input type="text" name="msg_subject" id="msg_subject" class="form-control" placeholder="Subject*"
-                  required data-error="Please enter your subject">
-                <div class="help-block with-errors"></div>
+                  required>
               </div>
             </div>
-
             <div class="col-12">
               <div class="form-group">
                 <textarea name="message" class="form-control" placeholder="Message*" id="message" cols="30" rows="6"
-                  required data-error="Write your message"></textarea>
-                <div class="help-block with-errors"></div>
+                  required></textarea>
               </div>
             </div>
-
-            <div class="form-group">
-              <div class="form-check">
-                <input name="gridCheck" value="I agree to the terms and privacy policy." class="form-check-input"
-                  type="checkbox" id="gridCheck" required>
-                <label class="form-check-label" for="gridCheck">
-                  I agree to the <a href="terms-conditions.html">terms</a> and <a href="privacy-policy.html">privacy
-                    policy</a>
-                </label>
-                <div class="help-block with-errors gridCheck-error"></div>
-              </div>
-            </div>
-
             <div class="col-lg-12 col-md-12">
               <button type="submit" class="default-btn active">
                 <span>Send Message</span>
-                <i class="ri-arrow-right-line"></i>
               </button>
-              <div id="msgSubmit" class="h3 text-center hidden"></div>
-              <div class="clearfix"></div>
             </div>
           </div>
         </form>
+        <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
+        <script>
+          $(document).ready(function () {
+            $('#contactForm').on('submit', function (event) {
+              event.preventDefault(); // Prevent the default form submission
+
+              $.ajax({
+                url: 'contact_form.php',
+                type: 'POST',
+                data: $(this).serialize(),
+                success: function (response) {
+                  var jsonResponse = JSON.parse(response);
+                  if (jsonResponse.success) {
+                    alert('Form Data Submitted Successfully');
+                    $('#contactForm')[0].reset(); // Clear the form
+                  } else {
+                    alert('Error: ' + jsonResponse.message);
+                  }
+                },
+                error: function (xhr, status, error) {
+                  alert('An error occurred: ' + error);
+                }
+              });
+            });
+          });
+        </script>
+
+
       </div>
     </div>
   </div>
   <!--End Contact Form Area-->
 
-  <!--Start map Area-->
-  <!-- <div class="map-area">
-            <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d12711295.912702927!2d-97.8942370839028!3d38.93897514662292!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x54eab584e432360b%3A0x1c3bb99243deb742!2sUnited%20States!5e0!3m2!1sen!2sbd!4v1654928837073!5m2!1sen!2sbd" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
-        </div> -->
-  <!--End map Area-->
-
-    <!--Start Footer Area-->
-    <div class="start-footer-area pt-100 pb-70">
-      <div class="container">
-        <div class="row">
-          <div class="col-lg-4 col-sm-4">
-            <div class="single-footer-widget footer-logo-area">
-              <a href="index.html"><img src="assets/images/people-prudent-logo_dark.png" alt="Logo" /></a>
-              <div class="social-content">
-                <ul>
-                  <li>
-                    <span>Follow Us</span>
-                  </li>
-                  <li>
-                    <a href="https://www.facebook.com" target="_blank"><i class="ri-facebook-line"></i></a>
-                  </li>
-                  <li>
-                    <a href="https://www.twitter.com" target="_blank"><i class="ri-twitter-line"></i></a>
-                  </li>
-                  <li>
-                    <a href="https://instagram.com/?lang=en" target="_blank"><i class="ri-instagram-line"></i></a>
-                  </li>
-                  <li>
-                    <a href="https://linkedin.com/?lang=en" target="_blank"><i class="ri-linkedin-line"></i></a>
-                  </li>
-                </ul>
-              </div>
-            </div>
-          </div>
-          <div class="col-lg-4 col-sm-4">
-            <div class="single-footer-widget footer-address-area">
-              <h3>Address Information</h3>
+  <!--Start Footer Area-->
+  <div class="start-footer-area pt-100 pb-70">
+    <div class="container">
+      <div class="row">
+        <div class="col-lg-4 col-sm-4">
+          <div class="single-footer-widget footer-logo-area">
+            <a href="index.html"><img src="assets/images/people-prudent-logo_dark.png" alt="Logo" /></a>
+            <div class="social-content">
               <ul>
                 <li>
-                  <div class="icon">
-                    <i class="flaticon-phone-call-1"></i>
-                  </div>
-                  <p>Call Us Now</p>
-                  <a href="tel:+91 9209406439">+91 9209406439</a>
+                  <span>Follow Us</span>
                 </li>
                 <li>
-                  <div class="icon">
-                    <i class="flaticon-mail"></i>
-                  </div>
-                  <p>Email Address</p>
-                  <i class="fas fa-envelope"></i>
-                  <a href="mailto:info@peopleprudent.co.in"><span>info@peopleprudent.co.in</span></a>
+                  <a href="https://www.facebook.com" target="_blank"><i class="ri-facebook-line"></i></a>
                 </li>
                 <li>
-                  <div class="icon">
-                    <i class="flaticon-place"></i>
-                  </div>
-                  <p>Address</p>
-                  <span>405, 4th Floor, LMS Finswell, Sakore Nagar,<br>Viman Nagar, Pune-411014</span>
+                  <a href="https://www.twitter.com" target="_blank"><i class="ri-twitter-line"></i></a>
+                </li>
+                <li>
+                  <a href="https://instagram.com/?lang=en" target="_blank"><i class="ri-instagram-line"></i></a>
+                </li>
+                <li>
+                  <a href="https://www.linkedin.com/company/people-prudent-consulting-hr-solutions-private-limited/"
+                    target="_blank"><i class="ri-linkedin-line"></i></a>
                 </li>
               </ul>
             </div>
           </div>
-          <div class="col-lg-4 col-sm-4">
-            <div class="single-footer-widget footer-useful-links-area pl-20">
-              <h3>Quick Links</h3>
-              <div class="link-list">
-                <ul>
-                  <li>
-                    <i class="ri-arrow-right-s-line"></i>
-                    <a href="index.html"> Home </a>
-                  </li>
-                  <li>
-                    <i class="ri-arrow-right-s-line"></i>
-                    <a href="our_services.html"> Our sevices </a>
-                  </li>
-                  <li>
-                    <i class="ri-arrow-right-s-line"></i>
-                    <a href="meet_our_team.html"> Meet our team </a>
-                  </li>
-                  <li>
-                    <i class="ri-arrow-right-s-line"></i>
-                    <a href="our_clients.html"> Our Clients </a>
-                  </li>
-                  <li>
-                    <i class="ri-arrow-right-s-line"></i>
-                    <a href="https://peopleprudent.com/insights/"> Insights </a>
-                  </li>
-                  <li>
-                    <i class="ri-arrow-right-s-line"></i>
-                    <a href="https://peopleprudent.com/resources/"> Resources </a>
-                  </li>
-                  <li>
-                    <i class="ri-arrow-right-s-line"></i>
-                    <a href="CenterOfExcellence.html" > Center of Excellence </a>
-                  </li>
-                  <li>
-                    <i class="ri-arrow-right-s-line"></i>
-                    <a href="https://peopleprudent.com/news/"> News </a>
-                  </li>
-                  <li>
-                    <i class="ri-arrow-right-s-line"></i>
-                    <a href="careers.html"> Careers </a>
-                  </li>
-                  <li>
-                    <i class="ri-arrow-right-s-line"></i>
-                    <a href="contact_us.html"> Contact us </a>
-                  </li>
-                </ul>
-              </div>
+        </div>
+        <div class="col-lg-4 col-sm-4">
+          <div class="single-footer-widget footer-address-area">
+            <h3>Address Information</h3>
+            <ul>
+              <li>
+                <div class="icon">
+                  <i class="flaticon-phone-call-1"></i>
+                </div>
+                <p>Call Us Now</p>
+                <a href="tel:+91 9209406439">+91 9209406439</a>
+              </li>
+              <li>
+                <div class="icon">
+                  <i class="flaticon-mail"></i>
+                </div>
+                <p>Email Address</p>
+                <i class="fas fa-envelope"></i>
+                <a href="mailto:info@peopleprudent.co.in"><span>info@peopleprudent.co.in</span></a>
+              </li>
+              <li>
+                <div class="icon">
+                  <i class="flaticon-place"></i>
+                </div>
+                <p>Address</p>
+                <span>405, 4th Floor, LMS Finswell, Sakore Nagar,<br>Viman Nagar, Pune-411014</span>
+              </li>
+            </ul>
+          </div>
+        </div>
+        <div class="col-lg-4 col-sm-4">
+          <div class="single-footer-widget footer-useful-links-area pl-20">
+            <h3>Quick Links</h3>
+            <div class="link-list">
+              <ul>
+                <li>
+                  <i class="ri-arrow-right-s-line"></i>
+                  <a href="index.html"> Home </a>
+                </li>
+                <li>
+                  <i class="ri-arrow-right-s-line"></i>
+                  <a href="our_services.html"> Our sevices </a>
+                </li>
+                <li>
+                  <i class="ri-arrow-right-s-line"></i>
+                  <a href="our_clients.html"> Our Clients </a>
+                </li>
+                <li>
+                  <i class="ri-arrow-right-s-line"></i>
+                  <a href="https://peopleprudent.com/insights/"> Insights </a>
+                </li>
+                <li>
+                  <i class="ri-arrow-right-s-line"></i>
+                  <a href="https://peopleprudent.com/resources/"> Resources </a>
+                </li>
+                <li>
+                  <i class="ri-arrow-right-s-line"></i>
+                  <a href="CenterOfExcellence.html"> Center of Excellence </a>
+                </li>
+                <li>
+                  <i class="ri-arrow-right-s-line"></i>
+                  <a href="https://peopleprudent.com/news/"> News </a>
+                </li>
+                <li>
+                  <i class="ri-arrow-right-s-line"></i>
+                  <a href="careers.html"> Careers </a>
+                </li>
+                <li>
+                  <i class="ri-arrow-right-s-line"></i>
+                  <a href="contact_us.html"> Contact us </a>
+                </li>
+              </ul>
             </div>
           </div>
         </div>
       </div>
     </div>
-    <!--End Footer Area-->
+  </div>
+  <!--End Footer Area-->
 
-    <!--Start Copy Right Area-->
-    <div class="copy-right-area">
-      <div class="container">
-        <p>
-          © <span>2024 PeoplePrudent</span> All Rights Reserved.
-        </p>
-      </div>
+  <!--Start Copy Right Area-->
+  <div class="copy-right-area">
+    <div class="container">
+      <p>
+        © <span>2024 PeoplePrudent</span> All Rights Reserved.
+      </p>
     </div>
-    <!--End Copy Right Area-->
+  </div>
+  <!--End Copy Right Area-->
 
-    <!-- Start Go Top Area -->
-    <div class="go-top">
-      <i class="ri-rocket-line"></i>
-      <i class="ri-rocket-line"></i>
-    </div>
-    <!-- End Go Top Area -->
+  <!-- Start Go Top Area -->
+  <div class="go-top">
+    <i class="ri-rocket-line"></i>
+    <i class="ri-rocket-line"></i>
+  </div>
+  <!-- End Go Top Area -->
 
-    <!-- Jquery js -->
-    <script data-cfasync="false" src="/cdn-cgi/scripts/5c5dd728/cloudflare-static/email-decode.min.js"></script>
-    <script src="assets/js/jquery.min.js"></script>
-    <!-- Bootstrap bundle js -->
-    <script src="assets/js/bootstrap.bundle.min.js"></script>
-    <!-- Meanmenu js -->
-    <script src="assets/js/jquery.meanmenu.js"></script>
-    <!-- Owl Carosel js -->
-    <script src="assets/js/owl.carousel.min.js"></script>
-    <!-- Magnific popup js -->
-    <script src="assets/js/jquery.magnific-popup.js"></script>
-    <!-- Aos js -->
-    <script src="assets/js/aos.js"></script>
-    <!-- Mixitup js -->
-    <script src="assets/js/mixitup.min.js"></script>
-    <!-- Odometer js -->
-    <script src="assets/js/odometer.min.js"></script>
-    <!-- Appear js -->
-    <script src="assets/js/appear.min.js"></script>
-    <!-- Form Validator js -->
-    <script src="assets/js/form-validator.min.js"></script>
-    <!-- Contact Form Script js -->
-    <script src="assets/js/contact-form-script.js"></script>
-    <!-- Ajaxchimp js -->
-    <script src="assets/js/ajaxchimp.min.js"></script>
-    <!--Custom js-->
-    <script src="assets/js/custom.js"></script>
-    <!--Script js-->
-    <script src="assets/js/script.js"></script>
+  <!-- Jquery js -->
+  <script data-cfasync="false" src="/cdn-cgi/scripts/5c5dd728/cloudflare-static/email-decode.min.js"></script>
+  <script src="assets/js/jquery.min.js"></script>
+  <!-- Bootstrap bundle js -->
+  <script src="assets/js/bootstrap.bundle.min.js"></script>
+  <!-- Meanmenu js -->
+  <script src="assets/js/jquery.meanmenu.js"></script>
+  <!-- Owl Carosel js -->
+  <script src="assets/js/owl.carousel.min.js"></script>
+  <!-- Magnific popup js -->
+  <script src="assets/js/jquery.magnific-popup.js"></script>
+  <!-- Aos js -->
+  <script src="assets/js/aos.js"></script>
+  <!-- Mixitup js -->
+  <script src="assets/js/mixitup.min.js"></script>
+  <!-- Odometer js -->
+  <script src="assets/js/odometer.min.js"></script>
+  <!-- Appear js -->
+  <script src="assets/js/appear.min.js"></script>
+  <!-- Form Validator js -->
+  <script src="assets/js/form-validator.min.js"></script>
+  <!-- Contact Form Script js -->
+  <!-- <script src="assets/js/contact-form-script.js"></script> -->
+  <!-- Ajaxchimp js -->
+  <script src="assets/js/ajaxchimp.min.js"></script>
+  <!--Custom js-->
+  <script src="assets/js/custom.js"></script>
+  <!--Script js-->
+  <script src="assets/js/script.js"></script>
 </body>
 
 </html>
