--- a/index.html
+++ b/index.html
@@ -99,7 +99,8 @@
                   <a href="https://instagram.com/?lang=en" target="_blank"><i class="ri-instagram-line"></i></a>
                 </li>
                 <li>
-                  <a href="https://linkedin.com/?lang=en" target="_blank"><i class="ri-linkedin-line"></i></a>
+                  <a href="https://www.linkedin.com/company/people-prudent-consulting-hr-solutions-private-limited/"
+                    target="_blank"><i class="ri-linkedin-line"></i></a>
                 </li>
               </ul>
             </div>
@@ -140,10 +141,6 @@
 
               <li class="nav-item">
                 <a href="Our_Services.html" class="nav-link"> Our Services </a>
-              </li>
-
-              <li class="nav-item">
-                <a href="meet_our_team.html" class="nav-link"> Meet Our Team </a>
               </li>
 
               <li class="nav-item">
@@ -241,25 +238,25 @@
 
   <!--Start banner Area_1-->
   <div class="banner-area">
-    <div class="hero-slider owl-carousel owl-theme">
-      <div class="slider-item bg-1">
-        <div class="container-fluid">
-          <div class="banner-content">
-            <h1 class="frame1"> 
-              <b>People Prudent Consulting & HR Solutions Private Limited</b>
-            </h1>
-            <p class="frame2">
-             <b><em>Center of Excellence</em></b><br> in HR consulting & HR solutions
-            </p>
-            <h3> <b>Symphony of -</b></h3>
-            <h4>HRM Science - The wisdom of its application - The art of execution</h4>
-            <!-- <span class="auto-type"></span> -->
-            <video autoplay muted loop class="video-background">
-              <source src="assets\images\banner\homepage_video.mp4" type="video/mp4">
-          </div>
+    <!-- <div class="hero-slider owl-carousel owl-theme"> -->
+    <div class="slider-item bg-1">
+      <div class="container-fluid">
+        <div class="banner-content">
+          <h1 class="frame1">
+            <b>People Prudent Consulting & HR Solutions Private Limited</b>
+          </h1>
+          <p class="frame2">
+            <b><em>Center of Excellence</em></b><br> in HR consulting & HR solutions
+          </p>
+          <h3> <b>Symphony of -</b></h3>
+          <h4>HRM Science - The wisdom of its application - The art of execution</h4>
+          <!-- <span class="auto-type"></span> -->
+          <video autoplay muted loop class="video-background">
+            <source src="assets\images\banner\homepage_video.mp4" type="video/mp4">
         </div>
       </div>
     </div>
+    <!-- </div> -->
   </div>
   <!--End banner Area_1-->
 
@@ -273,25 +270,25 @@
           </div>
         </div> -->
         <!-- <div class="col-lg-6"> -->
-          <div class="about-content pl-15">
-            <div class="about-title">
-              <h1>Welcome to People Prudent</h1>
-              <p>
-                Step into a realm where HR transcends the ordinary and becomes an art form - a beautiful symphony of the
-                science of Human Resource Management, its prudent application and flawless execution; Delivering
-                meaningful high impact change, Change that makes HR your strategic advantage, change that truly
-                matters!!
-              </p>
-              <p>
-                Our consulting practices are based on these three core principles:<br>
-                <ol>
-                    <li>Uncompromising domain knowledge and subject matter expertise.</li><br>
-                    <li>Recognizing the uniqueness of every client business.</li><br>
-                    <li>Validated context for effective solutioning and interventions.</li>
-                  </ol>
-              </p>
-            </div>
+        <div class="about-content pl-15">
+          <div class="about-title">
+            <h1>Welcome to People Prudent</h1>
+            <p>
+              Step into a realm where HR transcends the ordinary and becomes an art form - a beautiful symphony of the
+              science of Human Resource Management, its prudent application and flawless execution; Delivering
+              meaningful high impact change, Change that makes HR your strategic advantage, change that truly
+              matters!!
+            </p>
+            <p>
+              Our consulting practices are based on these three core principles:<br>
+            <ol>
+              <li>Uncompromising domain knowledge and subject matter expertise.</li><br>
+              <li>Recognizing the uniqueness of every client business.</li><br>
+              <li>Validated context for effective solutioning and interventions.</li>
+            </ol>
+            </p>
           </div>
+        </div>
         <!-- </div> -->
       </div>
     </div>
@@ -314,10 +311,12 @@
           At People Prudent, we are experts building the bedrock of organizational success - crafting people policies, systems, processes and solutions that pave the way for unparalleled business success.<br>With a steadfast commitment to delivering tangible returns on investment, we offer HR solutions meticulously designed & tailor to elevate your organization to new heights.
         </p> -->
         <p>
-          At People Prudent, we are experts in building the bedrock of organizational success - crafting people policies, systems, processes and solutions that pave the way for unparalleled business success.
+          At People Prudent, we are experts in building the bedrock of organizational success - crafting people
+          policies, systems, processes and solutions that pave the way for unparalleled business success.
         </p>
         <p>
-          With a steadfast commitment to delivering tangible returns on investment, we offer HR solutions meticulously designed & tailored to elevate your organization to new heights.
+          With a steadfast commitment to delivering tangible returns on investment, we offer HR solutions meticulously
+          designed & tailored to elevate your organization to new heights.
         </p>
       </div>
       <div class="row">
@@ -328,7 +327,8 @@
               <div class="social-content">
                 <ul>
                   <li>
-                    <a href="https://linkedin.com/?lang=en" target="_blank"><i class="ri-linkedin-line"></i></a>
+                    <a href="https://www.linkedin.com/in/singhnirmal?utm_source=share&utm_campaign=share_via&utm_content=profile&utm_medium=android_app"
+                      target="_blank"><i class="ri-linkedin-line"></i></a>
                   </li>
                 </ul>
               </div>
@@ -345,8 +345,8 @@
               <div class="social-content">
                 <ul>
                   <li>
-                    <a href="https://www.linkedin.com/in/jackson-hrangchal-19437bb1/" target="_blank"><i
-                        class="ri-linkedin-line"></i></a>
+                    <a href="https://www.linkedin.com/in/jackson-hrangchal-19437bb1?utm_source=share&utm_campaign=share_via&utm_content=profile&utm_medium=android_app"
+                      target="_blank"><i class="ri-linkedin-line"></i></a>
                   </li>
                 </ul>
               </div>
@@ -363,7 +363,8 @@
               <div class="social-content">
                 <ul>
                   <li>
-                    <a href="https://linkedin.com/?lang=en" target="_blank"><i class="ri-linkedin-line"></i></a>
+                    <a href="https://www.linkedin.com/in/karishma-jhala-ingale-60421a14b?utm_source=share&utm_campaign=share_via&utm_content=profile&utm_medium=android_app"
+                      target="_blank"><i class="ri-linkedin-line"></i></a>
                   </li>
                 </ul>
               </div>
@@ -380,7 +381,8 @@
               <div class="social-content">
                 <ul>
                   <li>
-                    <a href="https://linkedin.com/?lang=en" target="_blank"><i class="ri-linkedin-line"></i></a>
+                    <a href="https://www.linkedin.com/in/arunima-mukherjee-37b323192?utm_source=share&utm_campaign=share_via&utm_content=profile&utm_medium=android_app"
+                      target="_blank"><i class="ri-linkedin-line"></i></a>
                   </li>
                 </ul>
               </div>
@@ -398,7 +400,8 @@
                 <div class="social-content">
                   <ul>
                     <li>
-                      <a href="https://linkedin.com/?lang=en" target="_blank"><i class="ri-linkedin-line"></i></a>
+                      <a href="https://www.linkedin.com/in/vibhavari-patil-511138149?utm_source=share&utm_campaign=share_via&utm_content=profile&utm_medium=android_app"
+                        target="_blank"><i class="ri-linkedin-line"></i></a>
                     </li>
                   </ul>
                 </div>
@@ -447,8 +450,10 @@
   <div class="services-area " id="OurServices">
     <div class="container">
       <div class="section-title">
-        <a href="our_services.html"><h1>Our Services </h1></a>
-        
+        <a href="our_services.html">
+          <h1>Our Services </h1>
+        </a>
+
       </div>
 
       <div class="row">
@@ -595,10 +600,13 @@
             <div class="skill-title">
               <h1>Our Clients</h1>
               <p>
-                At People Prudent, we are focused on serving our clients in one of the fastest growing markets that of the GCC. We pride ourselves in helping them navigate the challenges of today's business landscape, in seizing opportunities by guiding and implementing industry firsts and best practice.
+                At People Prudent, we are focused on serving our clients in one of the fastest growing markets that of
+                the GCC. We pride ourselves in helping them navigate the challenges of today's business landscape, in
+                seizing opportunities by guiding and implementing industry firsts and best practice.
                 <br></br>
                 We are here to empower your organization's success every step of the way.<br><br>
-                Discover the power of partnership as we work together to unleash the full potential of your organization.<br>
+                Discover the power of partnership as we work together to unleash the full potential of your
+                organization.<br>
               <h3>Contact us</h3>
               <h4>Accelerate into the Future!</h4>
               </p>
@@ -664,7 +672,10 @@
             <div class="row align-items-center">
               <div class="col-lg-7 col-md-7">
                 <div class="testimonials-content">
-                  <p>"They are very professional in their approach."People Prudent Consulting & HR Solutions LLC delivered great work. The team completed their tasks on time and professionally. They were flexible in accommodating the client's needs. Moreover, they were highly reliable in terms of data secrecy and confidentiality, resulting in a smooth engagement.
+                  <p>"They are very professional in their approach."People Prudent Consulting & HR Solutions LLC
+                    delivered great work. The team completed their tasks on time and professionally. They were flexible
+                    in accommodating the client's needs. Moreover, they were highly reliable in terms of data secrecy
+                    and confidentiality, resulting in a smooth engagement.
                   </p>
                   <ul class="ratings-list">
                     <li><i class="flaticon-star-3"></i></li>
@@ -714,7 +725,10 @@
             <div class="row align-items-center">
               <div class="col-lg-7 col-md-7">
                 <div class="testimonials-content">
-                  <p>"They were accessible, fast, and result oriented."Thanks to People Prudent Consulting & HR Solutions, the company closed several senior vacancies in the finance, tax, and audit department. The team communicated the project daily and discussed all needs on Microsoft teams and in person. Above all, their accessibility and speed were remarkable.
+                  <p>"They were accessible, fast, and result oriented."Thanks to People Prudent Consulting & HR
+                    Solutions, the company closed several senior vacancies in the finance, tax, and audit department.
+                    The team communicated the project daily and discussed all needs on Microsoft teams and in person.
+                    Above all, their accessibility and speed were remarkable.
                   </p>
                   <ul class="ratings-list">
                     <li><i class="flaticon-star-3"></i></li>
@@ -763,7 +777,9 @@
             <div class="row align-items-center">
               <div class="col-lg-7 col-md-7">
                 <div class="testimonials-content">
-                  <p>"We have a very good, collaborative relationship."People Prudent Consulting & HR Solutions successfully conducted job evaluations, meeting expectations. They foster a collaborative work environment through their professionalism and efficiency. Overall, they're a flexible partner. 
+                  <p>"We have a very good, collaborative relationship."People Prudent Consulting & HR Solutions
+                    successfully conducted job evaluations, meeting expectations. They foster a collaborative work
+                    environment through their professionalism and efficiency. Overall, they're a flexible partner.
                   </p>
                   <ul class="ratings-list">
                     <li><i class="flaticon-star-3"></i></li>
@@ -837,7 +853,8 @@
                     <a href="https://instagram.com/?lang=en" target="_blank"><i class="ri-instagram-line"></i></a>
                   </li>
                   <li>
-                    <a href="https://linkedin.com/?lang=en" target="_blank"><i class="ri-linkedin-line"></i></a>
+                    <a href="https://www.linkedin.com/company/people-prudent-consulting-hr-solutions-private-limited/"
+                      target="_blank"><i class="ri-linkedin-line"></i></a>
                   </li>
                 </ul>
               </div>
@@ -885,10 +902,7 @@
                     <i class="ri-arrow-right-s-line"></i>
                     <a href="our_services.html"> Our services </a>
                   </li>
-                  <li>
-                    <i class="ri-arrow-right-s-line"></i>
-                    <a href="meet_our_team.html"> Meet our team </a>
-                  </li>
+
                   <li>
                     <i class="ri-arrow-right-s-line"></i>
                     <a href="our_clients.html"> Our Clients </a>
@@ -903,7 +917,7 @@
                   </li>
                   <li>
                     <i class="ri-arrow-right-s-line"></i>
-                    <a href="CenterOfExcellence.html" > Center of Excellence </a>
+                    <a href="CenterOfExcellence.html"> Center of Excellence </a>
                   </li>
                   <li>
                     <i class="ri-arrow-right-s-line"></i>
@@ -949,8 +963,8 @@
     <script src="https://unpkg.com/typed.js@2.1.0/dist/typed.umd.js"></script>
 
     <script>
-      
-      var typed= new Typed(".auto-type", {
+
+      var typed = new Typed(".auto-type", {
         strings: ["- HRM Science ", "- The wisdom of its application", "- The art of execution."],
         typeSpeed: 150,
         backSpeed: 100,
