--- a/our_services.html
+++ b/our_services.html
@@ -56,7 +56,7 @@
               <img src="assets/images/white-logo.jpg" class="logo-2" alt="Logo" />
             </div>
           </div>
-          <div class="col-lg-6">
+          <!-- <div class="col-lg-6">
             <div class="social">
               <div class="social-content">
                 <ul>
@@ -77,7 +77,7 @@
                 </ul>
               </div>
             </div>
-          </div>
+          </div> -->
         </div>
       </div>
     </div>
@@ -352,15 +352,15 @@
                 <li>
                   <span>Follow Us</span>
                 </li>
-                <li>
+                <!-- <li>
                   <a href="https://www.facebook.com" target="_blank"><i class="ri-facebook-line"></i></a>
-                </li>
+                </li> -->
                 <li>
                   <a href="https://www.twitter.com" target="_blank"><i class="ri-twitter-line"></i></a>
                 </li>
-                <li>
+                <!-- <li>
                   <a href="https://instagram.com/?lang=en" target="_blank"><i class="ri-instagram-line"></i></a>
-                </li>
+                </li> -->
                 <li>
                   <a href="https://www.linkedin.com/company/people-prudent-consulting-hr-solutions-private-limited/"
                     target="_blank"><i class="ri-linkedin-line"></i></a>
