--- a/contact_us.html
+++ b/contact_us.html
@@ -179,7 +179,7 @@
             </div>
             <div class="col-lg-4 col-sm-6">
               <div class="form-group">
-                <input type="text" name="phone_number" id="phone_number" placeholder="Number*" required
+                <input type="text" name="phone_number" id="phone_number" placeholder="Phone Number*" required
                   class="form-control">
               </div>
             </div>
