--- a/our_clients.html
+++ b/our_clients.html
@@ -56,28 +56,6 @@
               <img src="assets/images/white-logo.jpg" class="logo-2" alt="Logo" />
             </div>
           </div>
-          <!-- <div class="col-lg-6">
-            <div class="social">
-              <div class="social-content">
-                <ul>
-                  <li>Follow Us: </li>
-                  <li>
-                    <a href="https://www.facebook.com" target="_blank"><i class="ri-facebook-line"></i></a>
-                  </li>
-                  <li>
-                    <a href="https://www.twitter.com" target="_blank"><i class="ri-twitter-line"></i></a>
-                  </li>
-                  <li>
-                    <a href="https://instagram.com/?lang=en" target="_blank"><i class="ri-instagram-line"></i></a>
-                  </li>
-                  <li>
-                    <a href="https://www.linkedin.com/company/people-prudent-consulting-hr-solutions-private-limited/"
-                      target="_blank"><i class="ri-linkedin-line"></i></a>
-                  </li>
-                </ul>
-              </div>
-            </div>
-          </div> -->
         </div>
       </div>
     </div>
@@ -152,7 +130,7 @@
     <div class="inner_banner">
       <div class="container">
         <div class="inner_text">
-          <h2>Our clients</h2>
+          <h2>Our Clients</h2>
         </div>
       </div>
     </div>
@@ -203,9 +181,7 @@
         </div>
       </div>
     </div>
-
   </div>
-
   <!-- Our clients section ends here-->
 
   <!--Start Footer Area-->
