--- a/index.html
+++ b/index.html
@@ -61,8 +61,8 @@
         <span>T</span>
         <br>
         <br>
-        <h3>Center Of Excellences</h3>
-        <h4>in HR consulting & HR solutions</h4>
+        <!-- <h3>Center Of Excellences</h3>
+        <h4>in HR consulting & HR solutions</h4> -->
       </div>
     </div>
 
