Added banner images

--- a/careers.html
+++ b/careers.html
@@ -151,8 +151,12 @@
     <!-- Header starts here -->
     <div class="inner_banner">
       <div class="container">
-        <div class="inner_text">
+        <div class="inner_text" >
+          <div class="img" src="assets/images/banner-img/career.jpg" alt="Image" style="visibility: visible; background-image: url(&quot;assets/images/banner-img/career.jpg&quot;); visibility: visible; ">
+          <!-- <img src="assets/images/career/career.jpg" alt="Image" /> -->
+          <!-- <div class="bg-image="\assets\images\career\career.jpg"></div> -->
           <h2>Careers</h2>
+        </div>
         </div>
       </div>
     </div>
