--- a/our_clients.html
+++ b/our_clients.html
@@ -130,8 +130,10 @@
     <div class="inner_banner">
       <div class="container">
         <div class="inner_text">
+          <div class="img" src="assets/images/banner-img/istockphoto-1134720340-1024x1024.jpg" alt="Image" style="visibility: visible; background-image: url(&quot;assets/images/banner-img/istockphoto-1134720340-1024x1024.jpg&quot;); visibility: visible; ">
           <h2>Our Clients</h2>
         </div>
+      </div>
       </div>
     </div>
   </header>
