--- a/CenterOfExcellence.html
+++ b/CenterOfExcellence.html
@@ -152,8 +152,10 @@
     <div class="inner_banner">
       <div class="container">
         <div class="inner_text">
+          <div class="img" src="assets/images/banner-img/istockphoto-1126957255-1024x1024.jpg" alt="Image" style="visibility: visible; background-image: url(&quot;assets/images/banner-img/istockphoto-1126957255-1024x1024.jpg&quot;); visibility: visible; ">
           <h2>Center Of Excellence </h2>
         </div>
+      </div>
       </div>
     </div>
   </header>
