--- a/contact_us.html
+++ b/contact_us.html
@@ -145,8 +145,10 @@
   <div class="inner_banner">
     <div class="container">
       <div class="inner_text">
+        <div class="img" src="assets/images/banner-img/about-us-banner.jpg" alt="Image" style="visibility: visible; background-image: url(&quot;assets/images/banner-img/about-us-banner.jpg&quot;); visibility: visible; ">
         <h2>Contact Us</h2>
       </div>
+    </div>
     </div>
   </div>
   <!-- </div> -->
