--- a/meet_our_team.html
+++ b/meet_our_team.html
@@ -156,8 +156,10 @@
     <div class="inner_banner">
       <div class="container">
         <div class="inner_text">
+          <div class="img" src="assets/images/banner-img/istockphoto-1147449046-1024x1024.jpg" alt="Image" style="visibility: visible; background-image: url(&quot;assets/images/banner-img/istockphoto-1147449046-1024x1024.jpg&quot;); visibility: visible; ">
           <h2>Meet Our team </h2>
         </div>
+      </div>
       </div>
     </div>
   </header>
